<resources>
    <string name="app_name">Notes</string>
    <string name="my_notes">Notes</string>
    <string name="search_notes">Search notes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="note_title">Title</string>
    <string name="note_subtitle">Subtitle</string>
    <string name="note">Note</string>
    <string name="share">Share</string>
    <string name="delete">Delete</string>
</resources>