<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_list_note"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_primary"
    tools:context=".MainActivity"
    android:animateLayoutChanges="true">

    <TextView
        android:id="@+id/tv_my_notes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_notes"
        android:textColor="@color/color_white"
        android:layout_marginStart="12dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="12dp"
        android:fontFamily="@font/ubuntu_bold"
        android:includeFontPadding="false"
        android:textSize="30sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <ImageView
        android:id="@+id/image_search"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="12dp"
        android:padding="5dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_search"
        app:tint="@color/color_search_icon"
        android:background="@drawable/background_search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_my_notes"
        app:layout_constraintBottom_toBottomOf="@id/tv_my_notes"/>

    <LinearLayout
        android:id="@+id/layout_search"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/background_search"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:layout_constraintTop_toBottomOf="@id/tv_my_notes">

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_search"
            app:tint="@color/color_search_icon"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@null"
            android:layout_marginStart="12dp"
            android:fontFamily="@font/ubuntu_regular"
            android:hint="@string/search_notes"
            android:textColorHint="@color/color_text_hint"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:includeFontPadding="false"
            android:inputType="text"
            android:textColor="@color/color_white"
            android:textSize="18sp"/>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/notes_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:paddingEnd="8dp"
        android:paddingStart="8dp"
        android:clipToPadding="false"
        app:layout_constraintBottom_toTopOf="@id/layout_quick_actions"
        app:layout_constraintTop_toBottomOf="@id/image_search"/>

    <LinearLayout
        android:id="@+id/layout_quick_actions"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="8dp"
        android:background="@color/color_quick_action_background"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:id="@+id/image_edit"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_edit"
            app:tint="@color/color_search_icon"
            android:layout_marginStart="16dp"/>

        <ImageView
            android:id="@+id/image_check_box"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_check_box"
            android:layout_marginStart="16dp"
            app:tint="@color/color_search_icon"/>

    </LinearLayout>

    <ImageView
        android:id="@+id/image_add_note"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/background_add_button"
        android:src="@drawable/ic_add"
        app:tint="@color/color_primary"
        android:padding="8dp"
        android:contentDescription="@string/app_name"
        android:layout_marginEnd="20dp"
        app:layout_constraintBottom_toTopOf="@id/layout_quick_actions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/layout_quick_actions"/>



</androidx.constraintlayout.widget.ConstraintLayout>