<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_primary"
    tools:context=".fragment.CreateNoteFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="50dp"
        android:clipToPadding="false"
        android:paddingBottom="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true">

            <ImageView
                android:id="@+id/image_back"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:src="@drawable/ic_back"
                android:background="@drawable/background_search"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/color_icon" />

            <TextView
                android:id="@+id/tv_save"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="@font/ubuntu_regular"
                android:gravity="center"
                android:minWidth="80dp"
                android:text="Save"
                android:textColor="@color/color_icon"
                android:textSize="18sp"
                android:background="@drawable/background_search"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/input_note_title"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="@null"
                android:fontFamily="@font/ubuntu_bold"
                android:hint="@string/note_title"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:includeFontPadding="false"
                android:inputType="textMultiLine"
                android:textColor="@color/color_white"
                android:textColorHint="@color/color_text_hint"
                android:textSize="24sp"
                app:layout_constraintTop_toBottomOf="@id/image_back" />

            <TextView
                android:id="@+id/tv_note_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textColor="@color/color_text_hint"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="@id/input_note_title"
                app:layout_constraintStart_toStartOf="@id/input_note_title"
                app:layout_constraintTop_toBottomOf="@id/input_note_title"
                tools:text="Mon, Jan 26th, 2021" />

            <EditText
                android:id="@+id/input_sub_title"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:background="@null"
                android:fontFamily="@font/ubuntu_medium"
                android:hint="@string/note_subtitle"
                android:importantForAutofill="no"
                android:includeFontPadding="false"
                android:textColor="@color/color_text_subtitle"
                android:textColorHint="@color/color_text_hint"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="@id/tv_note_date"
                app:layout_constraintStart_toStartOf="@id/view_subtitle_indicator"
                app:layout_constraintTop_toBottomOf="@id/tv_note_date" />

            <View
                android:id="@+id/view_subtitle_indicator"
                android:layout_width="5dp"
                android:layout_height="0dp"
                android:layout_marginStart="16dp"
                android:background="@drawable/background_indicator"
                app:layout_constraintBottom_toBottomOf="@id/input_sub_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/input_sub_title" />

            <EditText
                android:id="@+id/input_note_content"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="@null"
                android:fontFamily="@font/ubuntu_regular"
                android:gravity="top|start"
                android:hint="@string/note"
                android:minHeight="300dp"
                android:textColor="@color/color_white"
                android:textColorHint="@color/color_text_hint"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/input_sub_title" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="bottom">

        <ImageView
            android:id="@+id/image_add_more"
            android:layout_width="30dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:src="@drawable/ic__add_more"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/color_icon" />

        <ImageView
            android:id="@+id/image_more"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_gravity=""
            android:layout_weight="1"
            android:src="@drawable/ic_more"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/color_icon" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>